--- a/html/index.html
+++ b/html/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login screen</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="blueBg"></div>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login screen</title>
+        <link rel="stylesheet" type="text/css" href="../Css/style.css">
+    </head>
+    <body>
+        <div class="container">
+            <div class="blueBg">
+                <div class="box signin">
+                    <h2>Já tem uma conta ?</h2>
+                    <button class="signinBtn">Entrar</button>
+                </div>
+                <div class="box signup">
+                    <h2>Não tem uma conta ?</h2>
+                    <button class="signupBtn">Cadastrar</button>
+                </div>
+            </div>
+            <div class="formAx">
+
+            </div>
+        </div>
+    </body>
 </html>
+
