--- a/html/index.html
+++ b/html/index.html
@@ -20,9 +20,18 @@
                 </div>
             </div>
             <div class="formAx">
-
+                <div class ="form signinForm">
+                    <form>
+                        <h3>Entrar</h3>
+                        <input type="text" placeholder="Username">
+                        <input type="password" placeholder="Password">
+                        <input type="submit" value="Login">
+                        <a href="#" class="forgot Password">Esqueci minha senha</a>
+                    </form>
+                </div>
             </div>
         </div>
+        <script src="../Javascript/script.js"></script>
     </body>
 </html>
 
