--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
                         <input type="text" placeholder="Username">
                         <input type="password" placeholder="Password">
                         <input type="submit" value="Login">
-                        <a href="#" class="forgot Password">Esqueci minha senha</a>
+                        <a href="#" class="forgot">Esqueci minha senha</a>
                     </form>
                 </div>
             </div>
