--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,18 @@
                         <a href="#" class="forgot">Esqueci minha senha</a>
                     </form>
                 </div>
+
+                <div class ="form signupForm">
+                    <form>
+                        <h3>Cadastrar</h3>
+                        <input type="text" placeholder="Username">
+                        <input type="text" placeholder="Email">
+                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="Confirmar Senha">
+                        <input type="submit" value="Registrar">
+                        
+                    </form>
+                </div>
             </div>
         </div>
         <script src="../Javascript/script.js"></script>
