--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login screen</title>
         <link rel="stylesheet" type="text/css" href="../Css/style.css">
-        <link rel="shortcut icon" href="" type="image/x-icon">
+        <link rel="shortcut icon" href="../Css/style.css" type="image/x-icon">
     </head>
     <body>
         <div class="container">
